# Clustering-CreditCards

./: README.md  pyproject.toml
data/processed_data/: creditcards_clusters.csv  creditcards_preprocessed.csv
models/: kmeans_model.pkl  pca_model.pkl
notebooks/: demoClusteringCreditCard.ipynb
src/: app.py  main.py
src/features/: data_loader.py  data_preprocessing.py  data_visualization.py  pca_analysis.py
src/models/: clustering.py
src/utils/: config.py  util.py
