[tool.poetry]
name = "classificationcreditcard"
version = "0.1.0"
description = ""
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"
streamlit = "^1.36.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
